@@ -371,7 +371,7 @@ returns a reversed copy of the string.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2008 by Moritz A. Lenz. This module is free software.
+Copyright (C) 2008, 2011 by Moritz A. Lenz. This module is free software.
 You may use, redistribute and modify it under the same terms as perl itself.
 
 Example code included in this package may be used as if it were Public Domain.
@@ -382,9 +382,11 @@ Moritz Lenz, moritz@faui2k3.org, L<http://perlgeek.de/>, L<http://perl-6.de/>
 
 =head1 DEVELOPMENT
 
-You can obtain the latest development version via subversion:
+You can obtain the latest development version via git:
 
-    svn co https://faui2k3.org/svn/moritz/cpan/Perl6-Str/
+    git clone git://github.com/moritz/Perl6-Str.git
+
+See also: L<https://github.com/moritz/Perl6-Str>.
 
 =cut
 
